# service-benchmarks

./: .gitignore  README.md
grpc-bidirectional/client/src/: main.cpp
grpc-bidirectional/server/src/: main.cpp
grpc-opencv/: CMakeLists.txt
grpc-opencv/client/: CMakeLists.txt
grpc-opencv/client/src/: video_client.cpp
grpc-opencv/proto/: CMakeLists.txt
grpc-opencv/proto/myproto/: frame.proto  request.proto
grpc-opencv/server/: CMakeLists.txt
grpc-opencv/server/src/: video_server.cpp
opencv-zeromq/: CMakeLists.txt  async_video_client.cpp  async_video_server.cpp  camera_capture.cpp  video_client.cpp  video_server.cpp
rpc/client/: CMakeLists.txt
rpc/client/src/: main.cpp
rpc/server/src/: main.cpp
rpcvsasio/asio/: makefile
rpcvsasio/asio/tcp_client/src/: asio_tcp_client.cpp
rpcvsasio/asio/tcp_server/src/: asio_tcp_server.cpp
rpcvsasio/rpc/: run.sh
rpcvsasio/rpc/client/src/: rpc_client.cpp
rpcvsasio/rpc/proto/: CMakeLists.txt
rpcvsasio/rpc/proto/myproto/: query.proto  response.proto
rpcvsasio/rpc/server/: CMakeLists.txt
rpcvsasio/rpc/server/src/: rpc_server.cpp
rpcvstcp/: CMakeLists.txt
rpcvstcp/rpc/: run.sh
rpcvstcp/rpc/client/: CMakeLists.txt
rpcvstcp/rpc/client/src/: rpc_client.cpp
rpcvstcp/rpc/server/src/: rpc_server.cpp
rpcvstcp/tcp/: tcp_client.cpp
shm/: client.cpp  server.cpp  shread  shread.cpp  shwrite  shwrite.cpp  tryftok
zeromq/: CMakeLists.txt  server.cpp
zeromq-pub-sub/: CMakeLists.txt  pub.c  sub.c
